# pytorchblueprint

./: .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  multinode.sh  pyproject.toml  rename_project.sh
.pre-commit-scripts/: add_license_header.py  exported_symbols.py  license_header.sh
configs/: flowmatching.yaml  hydra_defaults.yaml  momentmatching.yaml  scorematching.yaml  wasserteinmatching.yaml
configs/dataset/: gaussian.yaml  gaussian2spiral.yaml  spiral.yaml
configs/model/: momentnet.yaml  scorenet.yaml  velocitynet.yaml
configs/optimizer/: adamw.yaml  prodigy.yaml
configs/runtime/: training.yaml
configs/scheduler/: cosineannealing.yaml  none.yaml
configs/trainer/: flowmatching.yaml  momentmatching.yaml  scorematching.yaml  wasserteinmatching.yaml
scripts/: analyze_study.py  eval.py  export.py  find_batch_size.py  flops.py  multieval.py  multitest.py  quasi_random.py  quasirandom.py  test.py  train.py
src/blueprint/: __init__.py
src/blueprint/datasets/: __init__.py  sample2Ddataset.py
src/blueprint/engine/: __init__.py  export_loop.py  training.py  training_engine.py  training_loop.py  training_one_epoch.py  training_runner.py  validation.py  validation_loop.py
src/blueprint/losses/: __init__.py  hyvarinen.py  loor.py  mmd.py  ot.py  reinforce.py
src/blueprint/metrics/: __init__.py  earthmover.py  lazy_collection.py  meandict.py  median_of_means.py  quantile.py  wassertein_distance.py
src/blueprint/models/: __init__.py  momentnet.py  scorenet.py  velocitynet.py
src/blueprint/trainers/: __init__.py  flowmatchingtrainer.py  momentmatching.py  scorematching.py  (+1 more)
tests/: format_float.py  sample2D_test.py
(+41 files in other folders)
